その企画に参加するメンバーだけ表示するよう修正

--- a/templates/events/participants.html
+++ b/templates/events/participants.html
@@ -31,7 +31,7 @@
             <h2 class="fs-5 fw-bold mb-0">参加者</h2>
             <div class="col text-end">
                 <a href="{% url 'events:event_invite' event.id %}"
-                   class="btn btn-sm btn-primary">追加打診</a>
+                   class="btn btn-sm btn-primary">打診</a>
             </div>
         </div>
         <div class="card-body py-0">
