--- a/templates/events/participants.html
+++ b/templates/events/participants.html
@@ -33,6 +33,7 @@
                 <a href="{% url 'events:event_invite' event.id %}"
                    class="btn btn-sm btn-primary">打診</a>
             </div>
+            <!--TODO: 参加者数を表示する-->
         </div>
         <div class="card-body py-0">
             <table class="table mb-0">
