--- a/templates/events/participants.html
+++ b/templates/events/participants.html
@@ -32,6 +32,7 @@
             <div class="col text-end">
                 <a href="{% url 'events:event_invite' event.id %}"
                    class="btn btn-sm btn-primary">打診</a>
+                <!--TODO: 参加者募集中時以外は打診できないようにする-->
             </div>
             <!--TODO: 参加者数を表示する-->
         </div>
