文言の修正

--- a/templates/events/cancel_invitation.html
+++ b/templates/events/cancel_invitation.html
@@ -22,7 +22,7 @@
     </div>
     <form method="post">
         {% csrf_token %}
-        {% bootstrap_button "削除" button_type="submit" button_class="btn-danger" %}
+        {% bootstrap_button "取り消す" button_type="submit" button_class="btn-danger" %}
 
         {% include 'components/cancel.html' %}
 
