--- a/templates/accounts/widgets/suggest.html
+++ b/templates/accounts/widgets/suggest.html
@@ -1,23 +1,38 @@
-<input type="text"
-       id="{{ widget.name }}-input"
-       data-target="{{ widget.name }}"
-       autocomplete="off"
-       {% include "django/forms/widgets/attrs.html" %}>
-<ul id="{{ widget.name }}-list" class="dropdown list-group">
-</ul>
-<div class="card-text">
-    <ul id="{{ widget.name }}-display" class="my-2">
-        {% for group, options, index in widget.optgroups %}
-            {% for option in options %}
-                {% if option.selected %}
-                    <li class="suggest-item"
-                        data-target="{{ widget.name }}"
-                        data-pk="{{ option.value }}">{{ option.label }}</li>
-                {% endif %}
-            {% endfor %}
-        {% endfor %}
+<input type="text" id="{{ widget.name }}-input" data-target="{{ widget.name }}" autocomplete="off" 
+    {% include "django/forms/widgets/attrs.html" %}
+    >
+    <ul id="{{ widget.name }}-list"
+        class="dropdown list-group">
     </ul>
-</div>
-<div id="{{ widget.name }}-values" style="display:hidden">
-    {% for value in widget.value %}<input type="hidden" name="{{ widget.name }}" value="{{ value }}">{% endfor %}
-</div>
+    <div class="card-text">
+        <ul id="{{ widget.name }}-display"
+            class="my-2">
+            {% for group, options, index in widget.optgroups %}
+                {% for option in options %}
+                    {% if option.selected %}
+                        <li class="suggest-item"
+                            data-target="{{ widget.name }}"
+                            data-pk="{{ option.value }}">
+                            <svg class="dselect-tag-remove"
+                                 width="14"
+                                 height="14"
+                                 xmlns="http://www.w3.org/2000/svg"
+                                 viewBox="0 0 24 24"
+                                 fill="currentColor">
+                                <path d="M0 0h24v24H0z" fill="none"></path>
+                                <path d="M12 2C6.47 2 2 6.47 2 12s4.47 10 10 10 10-4.47 10-10S17.53 2 12 2zm5 13.59L15.59 17 12 13.41 8.41 17 7 15.59 10.59 12 7 8.41 8.41 7 12 10.59 15.59 7 17 8.41 13.41 12 17 15.59z">
+                                </path>
+                            </svg>
+                            {{ option.label }}
+                        </li>
+                    {% endif %}
+                {% endfor %}
+            {% endfor %}
+        </ul>
+    </div>
+    <div id="{{ widget.name }}-values"
+         style="display:hidden">
+        {% for value in widget.value %}<input type="hidden"
+       name="{{ widget.name }}"
+       value="{{ value }}"/>{% endfor %}
+    </div>
