--- a/templates/accounts/password_change.html
+++ b/templates/accounts/password_change.html
@@ -1,4 +1,4 @@
-{% extends 'accounts/base.html' %}
+{% extends "accounts/base.html" %}
 
 {% load static %}
 
@@ -10,11 +10,11 @@
 {% block breadcrumbs %}
     {{ block.super }}
     {% breadcrumb "パスワード変更" "accounts:password_change" %}
-{% endblock %}
+{% endblock breadcrumbs %}
 {% block content %}
     <p>元のパスワードがわからない場合は、このフォームでパスワードを変更することはできません。 直接プラットフォーム担当に申し出てください。</p>
     {{ context }}
-    <form method="POST">
+    <form method="post">
         {% csrf_token %}
         {% bootstrap_form form layout="floating" %}
         {% bootstrap_button "変更" button_type="submit" %}
