--- a/templates/events/create.html
+++ b/templates/events/create.html
@@ -10,7 +10,7 @@
           href="{% static 'accounts/css/suggest.css' %}"/>
     <script src="{% static 'accounts/js/suggest.js' %}"></script>
     <link rel="stylesheet"
-          href="{% static 'accounts/css/dselect.css' %}">
+          href="{% static 'accounts/css/dselect.css' %}"/>
     <script src="{% static 'accounts/js/dselect.js' %}"></script>
 {% endblock head %}
 {% block breadcrumbs %}
@@ -30,13 +30,12 @@
         {% bootstrap_field form.admin layout="floating" %}
         {% bootstrap_field form.school layout="floating" %}
         {% bootstrap_button "登録" button_type="submit" %}
-    </div>
-</form>
-<script>
-    const config = {
-        search: true, // Toggle search feature. Default: false
-    }
-    dselect(document.querySelector('#id_person_in_charge'), config)
-    dselect(document.querySelector('#id_admin'), config)
-</script>
+    </form>
+    <script>
+        const config = {
+            search: true, // Toggle search feature. Default: false
+        }
+        dselect(document.querySelector('#id_person_in_charge'), config)
+        dselect(document.querySelector('#id_admin'), config)
+    </script>
 {% endblock content %}
