--- a/templates/accounts/group/delete.html
+++ b/templates/accounts/group/delete.html
@@ -11,7 +11,7 @@
     {{ block.super }}
     {% breadcrumb "班" "accounts:group" %}
     {% breadcrumb object.name "accounts:group_delete" object.id %}
-{% endblock %}
+{% endblock breadcrumbs %}
 {% block content %}
     <div class="mb-3">
         <p>
@@ -19,7 +19,7 @@
         </p>
         <p>削除すると、この班に所属するユーザーの班は空欄になります。</p>
     </div>
-    <form method="POST">
+    <form method="post">
         {% csrf_token %}
         {% bootstrap_button "削除" button_type="submit" button_class="btn-danger" %}
 
