--- a/templates/accounts/user/list.html
+++ b/templates/accounts/user/list.html
@@ -1,17 +1,19 @@
 {% extends "accounts/base.html" %}
+
 {% load django_bootstrap_breadcrumbs %}
+
 {% load static %}
 
-{% block customcss %}{% endblock customcss %}
-
+{% block customcss %}
+{% endblock customcss %}
 {% block breadcrumbs %}
     {{ block.super }}
     {% breadcrumb "ユーザー一覧" "accounts:users" %}
 {% endblock %}
-
 {% block content %}
     {% if user.is_staff %}
-        <a href="{% url 'accounts:users_import' %}" class="btn btn-primary mb-2">一括登録</a>
+        <a href="{% url 'accounts:users_import' %}"
+           class="btn btn-primary mb-2">一括登録</a>
     {% endif %}
     <table class="table">
         <thead>
@@ -33,4 +35,4 @@
             {% endfor %}
         </tbody>
     </table>
-{% endblock content%}
+{% endblock content %}
